@@ -36,7 +36,6 @@ import java.io.IOException;
 import java.io.OutputStreamWriter;
 import java.io.UncheckedIOException;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
 import java.util.Optional;
 import java.util.Set;
 
@@ -67,7 +66,7 @@ public class FileQuorumStateStoreTest {
         final Optional<ElectionState> expected;
         if (kraftVersion.isReconfigSupported()) {
             expected = Optional.of(
-                ElectionState.withElectedLeader(epoch, voter1, Optional.of(votedKey), Collections.emptySet())
+                ElectionState.withElectedLeader(epoch, voter1, Optional.of(votedKey), Set.of())
             );
         } else {
             expected = Optional.of(
@@ -108,7 +107,7 @@ public class FileQuorumStateStoreTest {
                 ElectionState.withVotedCandidate(
                     epoch,
                     voter1Key,
-                    Collections.emptySet()
+                    Set.of()
                 )
             );
         } else {
@@ -140,7 +139,7 @@ public class FileQuorumStateStoreTest {
 
         final Optional<ElectionState> expected;
         if (kraftVersion.isReconfigSupported()) {
-            expected = Optional.of(ElectionState.withUnknownLeader(epoch, Collections.emptySet()));
+            expected = Optional.of(ElectionState.withUnknownLeader(epoch, Set.of()));
         } else {
             expected = Optional.of(ElectionState.withUnknownLeader(epoch, voters));
         }
@@ -162,7 +161,7 @@ public class FileQuorumStateStoreTest {
         // Check that state is persisted
         FileQuorumStateStore reloadedStore = new FileQuorumStateStore(stateFile);
         assertEquals(
-            Optional.of(ElectionState.withUnknownLeader(epoch, Collections.emptySet())),
+            Optional.of(ElectionState.withUnknownLeader(epoch, Set.of())),
             reloadedStore.readElectionState()
         );
     }
